add demo how to use transferFile realm file between iOS and watchOS, plus demo how to use sentMessage.

--- a/SampleWatchApp Extension/Info.plist
+++ b/SampleWatchApp Extension/Info.plist
@@ -5,7 +5,7 @@
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleDisplayName</key>
-	<string>SampleWatchApp Extension</string>
+	<string>SampleWatchApp_Extension</string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
